# Document_Extractor_Agent

./: .env.template  .gitignore  README.md  TASK_1.5_COMPLETION.md  alembic.ini  pyproject.toml  requirements.txt
.kiro/specs/document-extraction-agent/: .config.kiro  design.md  requirements.md  tasks.md
alembic/: README.md  env.py
alembic/versions/: 001_create_initial_schema.py
src/: __init__.py
src/agents/: __init__.py
src/api/: README.md  __init__.py  main.py
src/api/routers/: __init__.py  batches.py  documents.py  extractions.py  health.py
src/models/: __init__.py  config.py
src/processors/: __init__.py
src/storage/: __init__.py  database.py  models.py
src/validation/: __init__.py
tests/: __init__.py  test_api_health.py  test_config.py  test_database_models.py  test_database_session.py  test_project_structure.py
