[tool.poetry]
name = "document-extraction-agent"
version = "0.1.0"
description = "Intelligent document processing system for extracting structured data from business documents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
langgraph = "^0.2.55"
langchain = "^0.3.13"
langchain-core = "^0.3.29"
langchain-openai = "^0.2.14"
python-multipart = ">=0.0.20,<0.0.28"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
hypothesis = "^6.122.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
